[gd_scene load_steps=8 format=3 uid="uid://gqwu2rpqmdlo"]

[ext_resource type="Texture2D" uid="uid://b4ect0lnh48om" path="res://Assets/TX Tileset Grass.png" id="1_0qf1i"]
[ext_resource type="Script" path="res://Scenes/main.gd" id="1_dcy86"]
[ext_resource type="Script" path="res://Scripts/band.gd" id="1_putd1"]
[ext_resource type="PackedScene" uid="uid://cuv3e4k6bcg47" path="res://Characters/Cleo/cleo.tscn" id="2_tg0w8"]
[ext_resource type="PackedScene" uid="uid://dipapxb10nfgo" path="res://Characters/Gumm/gumm.tscn" id="3_m3ok1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fmg6g"]
texture = ExtResource("1_0qf1i")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/next_alternative_id = 2
4:4/0 = 0
5:4/next_alternative_id = 2
5:4/0 = 0
6:4/next_alternative_id = 2
6:4/0 = 0
7:4/next_alternative_id = 2
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/next_alternative_id = 2
4:5/0 = 0
5:5/next_alternative_id = 2
5:5/0 = 0
6:5/next_alternative_id = 2
6:5/0 = 0
7:5/next_alternative_id = 2
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_t86f0"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_fmg6g")

[node name="Node" type="Node"]
script = ExtResource("1_dcy86")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t86f0")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 0, 6, 655361, 65536, 6, 655362, 0, 6, 655363, 65536, 6, 655364, 0, 4, 655365, 0, 5, 655366, 65536, 5, 655367, 0, 5, 655368, 65536, 5, 655369, 0, 4, 655370, 0, 6, 655371, 0, 4, 655372, 0, 6, 655373, 65536, 6, 655374, 0, 4, 655375, 65536, 5, 655376, 0, 4, 655377, 327680, 1879048199, 655378, 131072, 4, 655381, 262144, 4, 720917, 262144, 5, 655382, 327680, 4, 720918, 327680, 5, 655383, 393216, 4, 720919, 393216, 5, 655384, 458752, 4, 720920, 458752, 5, 655385, 262144, 4, 720921, 262144, 5, 655386, 327680, 4, 720922, 327680, 5, 655387, 393216, 4, 720923, 393216, 5, 655388, 458752, 4, 720924, 458752, 5, 655389, 262144, 4, 720925, 262144, 5, 655390, 327680, 4, 720926, 327680, 5, 655391, 0, 1, 720927, 0, 2, 655392, 65536, 1, 720928, 65536, 2, 851986, 131072, 4, 851987, 196608, 4, 917522, 131072, 5, 983058, 131072, 6, 1048594, 131072, 4, 917523, 196608, 5, 983059, 196608, 6, 1048595, 196608, 4, 1114130, 131072, 5, 1179666, 131072, 6, 1245202, 131072, 7, 1114131, 196608, 5, 1179667, 196608, 6, 1245203, 196608, 7, 786450, 262144, 7, 786451, 327680, 7, 720914, 131072, 4, 720915, 196608, 4, 655379, 196608, 4, 720916, 262144, 1610612743, 655380, 327680, 1610612743, 786452, 327680, 6, 720913, 262144, 1879048199, 720896, 0, 0, 786432, 0, 1, 851968, 0, 2, 917504, 0, 3, 720897, 65536, 0, 786433, 65536, 1, 851969, 65536, 2, 917505, 65536, 3, 720898, 131072, 0, 786434, 131072, 1, 851970, 131072, 2, 917506, 131072, 3, 720899, 196608, 0, 786435, 196608, 1, 851971, 196608, 2, 917507, 196608, 3, 720900, 0, 0, 786436, 0, 1, 851972, 262144, 2, 917508, 262144, 3, 720901, 65536, 0, 786437, 65536, 1, 851973, 65536, 4, 917509, 65536, 4, 720902, 131072, 0, 786438, 65536, 5, 851974, 65536, 4, 917510, 65536, 6, 720903, 196608, 0, 786439, 65536, 4, 851975, 327680, 3, 917511, 327680, 3, 720904, 0, 0, 786440, 65536, 4, 851976, 327680, 3, 917512, 327680, 3, 720905, 65536, 0, 786441, 65536, 4, 851977, 327680, 3, 917513, 327680, 3, 720906, 131072, 0, 786442, 131072, 1, 851978, 65536, 3, 917514, 65536, 3, 720907, 196608, 0, 786443, 196608, 1, 851979, 196608, 2, 917515, 196608, 3, 720908, 0, 0, 786444, 0, 1, 851980, 0, 2, 917516, 0, 3, 720909, 196608, 1610612736, 786445, 131072, 1610612736, 851981, 65536, 1610612736, 917517, 0, 1610612736, 720910, 196608, 1610612737, 786446, 196608, 1610612736, 851982, 131072, 1610612736, 917518, 65536, 1610612736, 720911, 196608, 1610612738, 786447, 196608, 1610612737, 851983, 131072, 1610612737, 917519, 65536, 1610612737, 983052, 0, 0, 1048588, 0, 1, 1114124, 262144, 2, 1179660, 262144, 3, 983053, 196608, 1610612736, 1048589, 131072, 1610612736, 1114125, 65536, 1610612736, 1179661, 196608, 1610612738, 983054, 0, 1610612736, 1048590, 196608, 1610612736, 1114126, 131072, 1610612736, 1179662, 65536, 1610612736, 983055, 0, 1610612737, 1048591, 196608, 1610612737, 1114127, 131072, 1610612737, 1179663, 65536, 1610612737, 983048, 65536, 4, 1048584, 65536, 6, 1114120, 0, 1, 1179656, 0, 2, 983049, 65536, 5, 1048585, 65536, 6, 1114121, 65536, 5, 1179657, 65536, 7, 983050, 131072, 0, 1048586, 131072, 0, 1114122, 131072, 1, 1179658, 131072, 2, 983051, 196608, 0, 1048587, 196608, 0, 1114123, 196608, 1, 1179659, 196608, 1610612736, 983044, 0, 0, 1048580, 0, 0, 1179652, 0, 2, 983045, 65536, 4, 1048581, 65536, 0, 1179653, 65536, 2, 983046, 0, 6, 1048582, 65536, 4, 1179654, 65536, 7, 983047, 65536, 5, 1048583, 65536, 4, 1179655, 327680, 2, 983040, 0, 0, 1114112, 0, 1, 1179648, 0, 2, 983041, 65536, 0, 1114113, 65536, 1, 1179649, 65536, 2, 983042, 131072, 0, 1114114, 131072, 1, 1179650, 131072, 2, 983043, 196608, 0, 1114115, 196608, 1, 1179651, 196608, 2, 1245184, 0, 3, 1245185, 65536, 3, 1245186, 131072, 3, 1245187, 196608, 3, 1310720, 0, 0, 1310721, 65536, 0, 1310722, 131072, 0, 1310723, 196608, 0, 1310724, 0, 0, 1310725, 65536, 0, 1310726, 131072, 0, 1310727, 196608, 0, 1310728, 0, 0, 1310729, 65536, 0, 1310730, 131072, 0, 1310731, 65536, 1610612736, 1310732, 65536, 1610612737, 1310733, 65536, 1610612738, 1310734, 65536, 1610612739, 1310735, 131072, 1610612738, 1245192, 0, 3, 1245193, 65536, 3, 1245194, 131072, 3, 1245195, 131072, 1610612736, 1245188, 0, 3, 1245189, 65536, 3, 1245190, 131072, 3, 1245191, 196608, 3, 0, 0, 0, 65536, 65536, 0, 131072, 65536, 1, 196608, 65536, 2, 1, 0, 3, 65537, 131072, 0, 131073, 131072, 1, 196609, 131072, 2, 2, 65536, 3, 65538, 196608, 0, 131074, 196608, 1, 196610, 196608, 2, 3, 131072, 3, 65539, 0, 0, 131075, 0, 1, 196611, 0, 2, 8, 65536, 3, 9, 131072, 3, 10, 196608, 3, 11, 0, 3, 4, 196608, 3, 5, 0, 3, 6, 65536, 3, 7, 0, 3, 262145, 131072, 3, 262146, 196608, 3, 262147, 0, 3, 65540, 327680, 1, 131076, 327680, 2, 196612, 65536, 2, 262148, 65536, 3, 65541, 393216, 1, 131077, 393216, 2, 196613, 131072, 2, 262149, 131072, 3, 65542, 458752, 1, 131078, 458752, 2, 196614, 196608, 2, 262150, 196608, 3, 65543, 0, 0, 131079, 0, 1, 196615, 0, 2, 262151, 0, 3, 65544, 65536, 0, 131080, 65536, 1, 196616, 65536, 2, 262152, 65536, 3, 327681, 131072, 0, 393217, 196608, 1610612738, 458753, 131072, 1610612738, 524289, 65536, 1610612738, 327682, 196608, 0, 393218, 196608, 1610612739, 458754, 262144, 2, 524290, 65536, 1610612739, 327683, 0, 0, 393219, 196608, 1610612736, 458755, 327680, 2, 524291, 65536, 1610612736, 327684, 65536, 0, 393220, 196608, 1610612737, 458756, 131072, 1610612737, 524292, 65536, 1610612737, 262144, 65536, 3, 327680, 65536, 0, 393216, 196608, 1610612737, 458752, 131072, 1610612737, 524288, 65536, 1610612737, 327685, 131072, 0, 393221, 196608, 1610612738, 458757, 131072, 1610612738, 524293, 262144, 3, 327686, 196608, 0, 393222, 196608, 1610612739, 458758, 131072, 1610612739, 524294, 262144, 3, 65545, 131072, 0, 131081, 131072, 1, 196617, 131072, 2, 262153, 131072, 3, 65546, 196608, 0, 131082, 196608, 1, 196618, 196608, 2, 262154, 196608, 3, 65547, 0, 0, 131083, 0, 1, 196619, 0, 2, 262155, 0, 3, 65548, 65536, 0, 131084, 262144, 2, 196620, 65536, 2, 262156, 65536, 3, 65549, 131072, 0, 131085, 327680, 2, 196621, 131072, 2, 262157, 131072, 3, 65550, 196608, 0, 131086, 196608, 1, 196622, 196608, 2, 262158, 196608, 3, 65551, 0, 0, 131087, 0, 1, 196623, 0, 2, 262159, 0, 3, 65552, 65536, 0, 131088, 65536, 1, 196624, 65536, 2, 262160, 65536, 3, 65553, 131072, 0, 131089, 131072, 1, 196625, 131072, 2, 262161, 131072, 3, 65554, 131072, 6, 131090, 131072, 7, 196626, 131072, 5, 262162, 131072, 5, 65555, 196608, 6, 131091, 196608, 7, 196627, 196608, 5, 262163, 196608, 5, 65556, 65536, 0, 131092, 65536, 1, 196628, 65536, 2, 262164, 65536, 3, 65557, 131072, 0, 131093, 131072, 1, 196629, 131072, 2, 262165, 131072, 3, 65558, 196608, 0, 131094, 196608, 1, 196630, 196608, 2, 262166, 196608, 3, 65559, 0, 0, 131095, 0, 1, 196631, 0, 4, 262167, 0, 5, 65560, 65536, 0, 131096, 65536, 1, 196632, 65536, 4, 262168, 65536, 5, 65561, 262144, 3, 131097, 131072, 1, 196633, 0, 4, 262169, 0, 5, 65562, 262144, 3, 131098, 262144, 3, 196634, 262144, 3, 262170, 65536, 5, 65563, 0, 0, 131099, 262144, 3, 196635, 262144, 3, 262171, 0, 3, 65564, 65536, 0, 131100, 65536, 1, 196636, 262144, 3, 262172, 262144, 3, 65565, 131072, 0, 131101, 131072, 1, 196637, 131072, 2, 262173, 262144, 3, 65566, 196608, 0, 131102, 196608, 1, 196638, 196608, 2, 262174, 196608, 3, 65567, 0, 0, 131103, 0, 1, 196639, 0, 2, 262175, 0, 3, 65568, 65536, 0, 131104, 65536, 1, 196640, 65536, 2, 262176, 65536, 3, 65569, 131072, 0, 131105, 131072, 1, 196641, 131072, 2, 262177, 131072, 3, 65570, 196608, 0, 131106, 196608, 1, 196642, 196608, 2, 262178, 196608, 3, 65571, 0, 0, 131107, 0, 1, 196643, 0, 2, 262179, 0, 3, 327715, 0, 0, 393251, 0, 1, 458787, 0, 2, 524323, 0, 3, 327711, 0, 0, 393247, 0, 1, 458783, 0, 2, 524319, 0, 3, 327712, 65536, 0, 393248, 65536, 1, 458784, 262144, 2, 524320, 65536, 3, 327713, 131072, 0, 393249, 131072, 1, 458785, 327680, 2, 524321, 131072, 3, 327714, 196608, 0, 393250, 196608, 1, 458786, 196608, 2, 524322, 196608, 3, 327707, 0, 0, 393243, 196608, 1610612736, 458779, 131072, 1610612736, 524315, 65536, 1610612736, 327708, 65536, 0, 393244, 196608, 1610612737, 458780, 131072, 1610612737, 524316, 65536, 1610612737, 327709, 131072, 0, 393245, 196608, 1610612738, 458781, 131072, 1610612738, 524317, 65536, 1610612738, 327710, 196608, 0, 393246, 196608, 1610612739, 458782, 131072, 1610612739, 524318, 65536, 1610612739, 327703, 262144, 3, 393239, 262144, 3, 458775, 131072, 1610612736, 524311, 65536, 1610612736, 327704, 65536, 4, 393240, 262144, 3, 458776, 262144, 3, 524312, 65536, 1610612737, 327705, 0, 4, 393241, 0, 5, 458777, 131072, 1610612738, 524313, 65536, 1610612738, 327706, 65536, 4, 393242, 65536, 5, 458778, 131072, 1610612739, 524314, 65536, 1610612739, 327699, 196608, 6, 393235, 196608, 5, 458771, 65536, 7, 524307, 65536, 1610612736, 327700, 65536, 0, 393236, 196608, 1610612737, 458772, 131072, 1610612737, 524308, 65536, 1610612737, 327701, 131072, 0, 393237, 196608, 1610612738, 458773, 131072, 1610612738, 524309, 65536, 1610612738, 327702, 262144, 3, 393238, 196608, 1610612739, 458774, 131072, 1610612739, 524310, 65536, 1610612739, 327695, 0, 0, 393231, 196608, 1610612736, 458767, 131072, 1610612736, 524303, 65536, 1610612736, 327696, 65536, 0, 393232, 196608, 1610612737, 458768, 131072, 1610612737, 524304, 65536, 1610612737, 327697, 131072, 0, 393233, 196608, 1610612738, 458769, 131072, 1610612738, 524305, 65536, 1610612738, 327698, 131072, 6, 393234, 131072, 5, 458770, 0, 7, 524306, 65536, 1610612739, 327691, 0, 0, 393227, 196608, 1610612736, 458763, 131072, 1610612736, 524299, 65536, 1610612736, 327692, 65536, 0, 393228, 196608, 1610612737, 458764, 131072, 1610612737, 524300, 65536, 1610612737, 327693, 131072, 0, 393229, 196608, 1610612738, 458765, 131072, 1610612738, 524301, 65536, 1610612738, 327694, 196608, 0, 393230, 196608, 1610612739, 458766, 131072, 1610612739, 524302, 65536, 1610612739, 327687, 0, 0, 393223, 196608, 1610612736, 458759, 131072, 1610612736, 524295, 262144, 3, 327688, 262144, 2, 393224, 196608, 1610612737, 458760, 131072, 1610612737, 524296, 65536, 1610612737, 327689, 327680, 2, 393225, 196608, 1610612738, 458761, 131072, 1610612738, 524297, 65536, 1610612738, 327690, 196608, 0, 393226, 196608, 1610612739, 458762, 131072, 1610612739, 524298, 65536, 1610612739, 12, 65536, 3, 13, 131072, 3, 14, 196608, 3, 15, 0, 3, 16, 65536, 3, 17, 131072, 3, 18, 131072, 5, 19, 196608, 5, 20, 65536, 3, 21, 131072, 3, 22, 196608, 3, 23, 0, 3, 24, 65536, 3, 25, 131072, 3, 26, 196608, 3, 27, 0, 3, 28, 65536, 3, 29, 131072, 3, 30, 196608, 3, 31, 0, 3, 32, 65536, 3, 33, 131072, 3, 34, 196608, 3, 35, 0, 3, 589859, 0, 0, 655395, 0, 1, 720931, 0, 2, 786467, 196608, 1610612738, 589855, 0, 0, 786463, 196608, 1610612738, 589856, 65536, 0, 786464, 196608, 1610612739, 589857, 131072, 0, 655393, 131072, 1, 720929, 131072, 2, 786465, 196608, 1610612736, 589858, 196608, 0, 655394, 196608, 1, 720930, 196608, 2, 786466, 196608, 1610612737, 983061, 65536, 1610612737, 917525, 131072, 1610612737, 851989, 196608, 1610612737, 786453, 196608, 1610612736, 983062, 65536, 1610612738, 917526, 131072, 1610612738, 851990, 196608, 1610612738, 786454, 196608, 1610612737, 983063, 65536, 1610612739, 917527, 262144, 2, 851991, 196608, 1610612739, 786455, 196608, 1610612738, 983064, 65536, 1610612736, 917528, 327680, 2, 851992, 196608, 1610612736, 786456, 196608, 1610612739, 983065, 65536, 1610612737, 917529, 131072, 1610612737, 851993, 196608, 1610612737, 786457, 196608, 1610612736, 983066, 65536, 1610612738, 917530, 131072, 1610612738, 851994, 196608, 1610612738, 786458, 196608, 1610612737, 983067, 65536, 1610612739, 917531, 131072, 1610612739, 851995, 196608, 1610612739, 786459, 196608, 1610612738, 983068, 65536, 1610612736, 917532, 131072, 1610612736, 851996, 196608, 1610612736, 786460, 196608, 1610612739, 983069, 262144, 3, 917533, 262144, 2, 851997, 262144, 1, 786461, 196608, 1610612736, 983070, 327680, 3, 917534, 327680, 2, 851998, 327680, 1, 786462, 196608, 1610612737, 983071, 65536, 1610612739, 917535, 131072, 1610612739, 851999, 196608, 1610612739, 983072, 65536, 1610612736, 917536, 131072, 1610612736, 852000, 196608, 1610612736, 983073, 65536, 1610612737, 917537, 131072, 1610612737, 852001, 196608, 1610612737, 983074, 262144, 2, 917538, 131072, 1610612738, 852002, 196608, 1610612738, 983075, 327680, 2, 917539, 196608, 1610612736, 852003, 196608, 1610612739, 1048596, 196608, 1610612736, 983060, 65536, 1610612736, 917524, 131072, 1610612736, 851988, 196608, 1610612736, 1048597, 196608, 1610612737, 1048598, 196608, 1610612738, 1048599, 196608, 1610612736, 1048600, 196608, 1610612737, 1048601, 196608, 1610612738, 1048602, 196608, 1610612739, 1048603, 196608, 1610612736, 1048604, 196608, 1610612737, 1048605, 196608, 1610612738, 1048606, 196608, 1610612739, 1048607, 196608, 1610612736, 1048608, 196608, 1610612737, 1048609, 196608, 1610612738, 1048610, 196608, 1610612739, 1048611, 65536, 1610612736, 1245204, 0, 1610612736, 1179668, 65536, 1610612736, 1114132, 131072, 1610612736, 1245205, 0, 1610612737, 1179669, 65536, 1610612737, 1114133, 131072, 1610612737, 1245206, 262144, 2, 1179670, 65536, 1610612738, 1114134, 131072, 1610612738, 1245207, 327680, 2, 1179671, 65536, 1610612736, 1114135, 131072, 1610612736, 1245208, 0, 1610612737, 1179672, 65536, 1610612737, 1114136, 131072, 1610612737, 1245209, 0, 1610612738, 1179673, 65536, 1610612738, 1114137, 262144, 2, 1245210, 0, 1610612739, 1179674, 65536, 1610612739, 1114138, 327680, 2, 1245211, 0, 1610612736, 1179675, 65536, 1610612736, 1114139, 131072, 1610612736, 1245212, 0, 1610612737, 1179676, 65536, 1610612737, 1114140, 131072, 1610612737, 1245213, 0, 1610612738, 1179677, 262144, 2, 1114141, 131072, 1610612738, 1245214, 0, 1610612739, 1179678, 327680, 2, 1114142, 131072, 1610612739, 1245215, 0, 1610612736, 1179679, 65536, 1610612736, 1114143, 131072, 1610612736, 1245216, 0, 1610612737, 1179680, 65536, 1610612737, 1114144, 131072, 1610612737, 1245217, 0, 1610612738, 1179681, 65536, 1610612738, 1114145, 131072, 1610612738, 1245218, 196608, 1610612736, 1179682, 65536, 1610612739, 1114146, 131072, 1610612739, 1245219, 65536, 1610612736, 1179683, 131072, 1610612736, 1114147, 196608, 1610612736, 1310736, 131072, 1610612739, 1310737, 196608, 1610612738, 1310738, 196608, 1610612739, 1310739, 196608, 1610612736, 1310740, 196608, 1610612737, 1310741, 196608, 1610612738, 1310742, 196608, 1610612739, 1310743, 196608, 1610612736, 1310744, 196608, 1610612737, 1310745, 196608, 1610612738, 1310746, 196608, 1610612739, 1310747, 196608, 1610612736, 1310748, 196608, 1610612737, 1310749, 196608, 1610612738, 1310750, 196608, 1610612739, 1310751, 196608, 1610612736, 1310752, 196608, 1610612737, 1310753, 196608, 1610612738, 1310754, 262144, 2, 1310755, 327680, 2, 917520, 65536, 1610612738, 851984, 131072, 1610612738, 786448, 196608, 1610612738, 720912, 196608, 1610612739, 1179664, 65536, 1610612738, 1114128, 131072, 1610612738, 1048592, 196608, 1610612738, 983056, 0, 1610612738, 1245197, 131072, 1610612738, 1245198, 0, 1610612736, 1245199, 0, 1610612737, 1245200, 0, 1610612738, 1245196, 131072, 1610612737, 983057, 0, 1610612739, 917521, 65536, 1610612739, 851985, 131072, 1610612739, 786449, 196608, 1610612739, 1245201, 0, 1610612739, 1179665, 65536, 1610612739, 1114129, 131072, 1610612739, 1048593, 196608, 1610612739, 589851, 0, 1610612736, 589852, 0, 1610612737, 589853, 0, 1610612738, 589854, 0, 1610612739, 589847, 0, 1610612736, 589848, 0, 1610612737, 589849, 0, 1610612738, 589850, 0, 1610612739, 589843, 0, 1610612736, 589844, 0, 1610612737, 589845, 0, 1610612738, 589846, 0, 1610612739, 589839, 0, 1610612736, 589840, 0, 1610612737, 589841, 0, 1610612738, 589842, 0, 1610612739, 589835, 0, 1610612736, 589836, 0, 1610612737, 589837, 0, 1610612738, 589838, 0, 1610612739, 589831, 262144, 3, 589832, 0, 1610612737, 589833, 0, 1610612738, 589834, 0, 1610612739, 589827, 0, 1610612736, 589828, 0, 1610612737, 589829, 131072, 3, 589830, 131072, 3, 589824, 0, 1610612737, 589825, 0, 1610612738, 589826, 0, 1610612739, 1114119, 196608, 1, 1114118, 65536, 4, 1114117, 65536, 1, 1114116, 0, 1, 1048579, 196608, 0, 1048578, 131072, 0, 1048577, 65536, 0, 1048576, 0, 0)

[node name="Band" type="Line2D" parent="."]
points = PackedVector2Array(512, 296)
script = ExtResource("1_putd1")

[node name="Cleo" parent="Band" instance=ExtResource("2_tg0w8")]
position = Vector2(432, 296)
lock_rotation = true

[node name="Gumm" parent="Band" instance=ExtResource("3_m3ok1")]
position = Vector2(568, 296)
lock_rotation = true

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerInfoBox" type="Panel" parent="GUI"]
layout_mode = 0
offset_right = 359.0
offset_bottom = 129.0

[node name="PlayerInfo" type="Label" parent="GUI/PlayerInfoBox"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "[States]"

[node name="PlayerValue" type="Label" parent="GUI/PlayerInfoBox"]
layout_mode = 0
offset_left = -1.0
offset_top = 52.0
offset_right = 82.0
offset_bottom = 75.0
text = "[Values]"

[connection signal="cleoSlingFinished" from="Band" to="Band/Cleo" method="_on_band_cleo_sling_finished"]
[connection signal="cleoSlung" from="Band" to="Band/Cleo" method="_on_band_cleo_slung"]
[connection signal="gummSlingFinished" from="Band" to="Band/Gumm" method="_on_band_gumm_sling_finished"]
[connection signal="gummSlung" from="Band" to="Band/Gumm" method="_on_band_gumm_slung"]
[connection signal="slinging" from="Band/Cleo" to="." method="_on_cleo_slinging"]
[connection signal="slinging" from="Band/Cleo" to="Band" method="_on_cleo_slinging"]
[connection signal="slinging" from="Band/Gumm" to="Band" method="_on_gumm_slinging"]
